# robocats

./: .gitignore  .gitmodules  TODO.txt  notes.txt
calibration/: imu_calibration.py  imu_notes.txt
control/: controller.py  test.py
networking/: enable_remote_desktop  etc_init_x11vnc.conf  interfaces.remote  reset_networking
reference/code/control/: controller.py
reference/code/ukf/: ahrs8-sim.py
reference/filtering/ukf/: multivariate.py  spt.py  ukf.py
reference/legacy_networking/: reset_networking
reference/ukf/: ahrs8-sim.py  multivariate.py  spt.py  test.py  ukf.py
reference_code/: cpp_compiler.bash
reference_code/control/: notes.txt
reference_code/imu_tests/: imu_test.py
reference_code/motor_tests/motor_test/: motor_test.ino
references/control/: matrix.py
references/motor_tests/: motor_test.ino  qualification_test.ino
robosub/launch/: camera.launch  jetsontx2.launch  manual_drive.launch  test_control.launch
robosub/src/gazebo_robosub/: CMakeLists.txt  package.xml  readme.txt
robosub/src/gazebo_robosub/data/models/buoy_red/: model.config  model.sdf
robosub/src/gazebo_robosub/data/models/qual_gate/: model.config  model.sdf
robosub/src/gazebo_robosub/data/models/qual_marker/: model.config  model.sdf
robosub/src/gazebo_robosub/data/models/robosub/: model.config  model.sdf
robosub/src/gazebo_robosub/data/models/water_surface/: model.config  model.sdf
robosub/src/gazebo_robosub/data/worlds/: qual.world  test.world
robosub/src/gazebo_robosub/launch/: qual.launch  test.launch
robosub/src/gazebo_robosub/src/: motor_plugin.cpp
(+22 files in other folders)
